# rcp_wandb

./: README.md  pyproject.toml  setup_venv.fish  setup_venv.sh
.github/: copilot-instructions.md
rcpwandb/: cli.py  logger_factory.py  tracker_factory.py
scripts/: .gitignore  demo.py
tests/: .gitignore  log_96196921-353e-45fe-9fc1-f16499c26bc6.txt  log_d28a4e52-ca54-4652-8370-b817dd308117.txt  print_arg_advanced.py  print_arg_basic.py  run_sweep.yml  run_sweep_advanced.yml  run_sweep_basic.yml  test_logger_factory.py  test_tracker_factory.py
