[tool.poetry]
name = "rcpwandb"
version = "0.1.0"
description = "Some extensions to the wandb command line client and a wrapper for the wandb library"
authors = ["Randy Paffenroth <randy.paffenroth@gmail.com>"]
readme = "README.md"
packages = [{include = "rcpwandb"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.*"
wandb = "0.19.*"
icecream = "2.1.*"
pyyaml = "6.0.*"
pandas = "2.2.*"

[tool.poetry.scripts]
rcp_wandb = 'rcpwandb.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
