[tool.poetry]
name = "rcpwandb"
version = "0.2.2"
description = "Some extensions to the wandb command line client and a wrapper for the wandb library"
authors = ["Randy Paffenroth <randy.paffenroth@gmail.com>"]
readme = "README.md"
packages = [{include = "rcpwandb"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.*"
wandb = "0.19.*"
icecream = "2.1.*"
pyyaml = "6.0.*"
pandas = "2.2.*"
loguru = "0.7.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.3.*"
pylint = "3.3.*"

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
numpy = "*"
pandas = "*"
plotly = "*"
torch = "^2.0.0"

[tool.poetry.scripts]
rcp_wandb = 'rcpwandb.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
